# forecasting-skills

./: ALTERNATIVES.md  ENVELOPE.md  README.md  pyproject.toml
skills/aggregate-temporal/: SKILL.md
skills/aggregate-temporal-resample/: SKILL.md
skills/aggregate-temporal-resample/scripts/: aggregate.py
skills/aggregate-temporal/scripts/: aggregate.py
skills/chirps-fetch/: SKILL.md
skills/chirps-fetch-live/: SKILL.md
skills/chirps-fetch/scripts/: fetch.py
skills/clip-region/: SKILL.md
skills/clip-region/scripts/: clip.py
skills/concat/: SKILL.md
skills/concat/scripts/: concat.py
skills/downscale/: SKILL.md
skills/downscale-coarsen/: SKILL.md
skills/downscale/scripts/: downscale.py
skills/ecmwf-fetch/: SKILL.md
skills/ecmwf-fetch/references/: REFERENCE.md
skills/ecmwf-fetch/scripts/: fetch.py
skills/email-report/: SKILL.md
skills/email-report/scripts/: compose.py  email.py
skills/imerg-fetch/: SKILL.md
skills/imerg-fetch-live/: SKILL.md
skills/imerg-fetch/scripts/: fetch.py
skills/plot/: SKILL.md
skills/plot-compare/: SKILL.md
skills/plot-compare/scripts/: plot_compare.py
skills/plot/scripts/: plot.py
skills/tahmo-fetch/: SKILL.md
skills/tahmo-fetch-live/: SKILL.md
skills/tahmo-fetch/scripts/: fetch.py
